[package]
name = "broker-ntp"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
license = "MIT"
description = "Library for parsing and communicating over Network Time Protocol."
homepage = "https://apibill.me"
repository = "https://github.com/apibillme/broker-ntp"
readme = "README.md"
keywords = ["protocol", "network", "time", "parser", "binary"]
categories = ["date-and-time", "network-programming", "parser-implementations", "encoding"]

[dependencies]
byteorder = "1.1"
conv = "0.3.2"
custom_derive = "0.1.5"
log = "0.3.6"

[dev-dependencies]
chrono = "0.4.4"
