[package]
name = "nippy"
version = "1.0.0"
edition = "2018"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
license = "MIT"
description = "Async NTP"
repository = "https://github.com/apibillme/nippy"
readme = "README.md"
keywords = ["network", "time", "async", "ntp", "parser"]
categories = ["date-and-time", "network-programming", "parser-implementations", "encoding"]

[dependencies]
async-std = { version = "1.9", features = ["attributes"] }
byteorder = "1.4"
conv = "0.3"
custom_derive = "0.1"
log = "0.4"
anyhow = "1"

[dev-dependencies]
chrono = "0.4"
